--- a/angular.json
+++ b/angular.json
@@ -38,7 +38,7 @@
             ],
             "styles": [
               "src/styles.css",
-              "E:/courses/Angular project/product_list/node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": [],
             "server": "src/main.server.ts",
